# Wheat-BRIDGES

./: .gitignore  .gitmodules  README.md  commit_all.sh  multisetup.py  pull_all.sh  pyproject.toml  requirements_minimal.txt  setup.py
conda/: environment.yaml  meta.yaml
root_bridges/: coupling_translator.yaml  whole_plant.py
simulations/: simulation.py  simulation_example.py
simulations/inputs/: Scenarios_24-09-13.xlsx  organs_initial_state.csv
simulations/scene/: analyze_simulation.py  analyze_single_simulation.py  quick_copy.txt  simulation.py  simulation_3d_soil.py  simulation_density.py  sub_analysis.sh  sub_simulation.sh  sub_simulation_3d.sh
simulations/scene/inputs/: Scenarios.xlsx  Scenarios_24-11-06.xlsx  Scenarios_25-06-05.xlsx  Scenarios_25-08-05.xlsx  Scenarios_25-10-04.xlsx  Scenarios_25-11-01.xlsx  meteo_Ljutovac2002.csv  meteo_Ljutovac2002_soil.csv  root_3_leaves.pckl
simulations/scene/inputs/legacy/: meteo_Ljutovac2002_climatik_-50averages.csv  meteo_Ljutovac2002_smoothed_soilT_2024-2025.csv
simulations/single_plant/: analyze_simulation.py  comparaisons_graphes.py  mtg_inspector.py  simulation.py
simulations/single_plant/inputs/: Scenarios_24-09-13.xlsx  Scenarios_24-11-06.xlsx
simulations/single_plant/inputs/postprocessing/: axes_postprocessing.csv  organs_postprocessing.csv  soils_postprocessing.csv
simulations/single_plant/inputs/validation/: outputs_validation_rhizodep_V0.xlsx
src/openalea/wheatbridges/: __init__.py  caribu_component.py  cn_wheat_collar.py  coupling_translator.yaml  wheat_bridges.py  wheat_bridges_no_soil.py
test/: test_apply_scenario.py  test_cnwheat.py  test_import.py  test_init.py  test_scene.py
test/Run-tmp/: band0.opt  cscene.can  pattern.8  sky.light
test/inputs/: Scenario_142.xlsx  Scenarios.xlsx  root_3_leaves.pckl
wheat_bridges/: caribu_component.py  cn_wheat_collar.py  coupling_translator.yaml  rhizospheric_soil.py  wheat_bridges.py  wheat_bridges_no_soil.py
