[build-system]
requires = [
    "setuptools",
    "setuptools_scm",
]
build-backend = "setuptools.build_meta"

# where your source lies if you followed src layout
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true # force explicit declaration of data (disable automatic inclusion)

[tool.setuptools.package-data]
"openalea.rootcynaps" = ["*.yaml"]

# enable dynamic version based on git tags
[tool.setuptools_scm]

[project]
name = "openalea.wheatbridges"
authors = [
  { name = "Tristan Gérault", email = "tristan.gerault@inrae.fr" },
  { name = "Christophe Pradal", email = "christophe.pradal@inria.fr" }
]
description = "Wheat-BRIDGES is a 3D wheat carbon, nitrogen, growth, water and anatomy FSPM in OpenAlea"
readme = "README.md"
license = "CECILL-C"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.8"
dynamic = ["version"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  #"License :: OSI Approved :: CeCILL-C License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Framework :: OpenAlea",
]

# you can list here all dependencies that are pip-instalable, and that have a name identical to the one used by conda (to allow reuse of this list in meta.yaml)
# If conda name is different, please do not declare the pip name, and declare conda name in the next section
dependencies = [
  "cmf"
]

# section specific to conda-only distributed package (not used by pip yet)
[tool.conda-environment]

dependencies = [
    #"openalea.metafspm",
    #"openalea.fspm-utility",
    # + other coupled model components as they will be packaged
    "scipy",
    "numpy",
    "openalea.mtg",
    "openalea.deploy",
    "openalea.lpy",
    "alinea.caribu",
    "alinea.astk",
    # metafspm
    "pyyaml",
    "numba",
    # fspm-utility
    "openpyxl",
    "pandas",
    "salib",
    "xarray",
    "netcdf4",
    "dask",
    "pyvista",
    "imageio",
    "imageio-ffmpeg",
    "matplotlib",
    "brokenaxes",
    "pint",
    "trimesh",
    "openalea.plantgl"
]

[project.optional-dependencies]
test = [
  "pytest",
  "nbmake"
]
dev = [
  "pytest >=6",
  "pytest-cov >=3",
]
doc = [
  "pydata-sphinx-theme",
  "myst-parser",
  "sphinx-favicon",
  "ipykernel",
  "sphinx-copybutton",
  "ipython_genutils",
  "nbsphinx"
]

[project.urls]
Repository = "https://github.com/GeraultTr/wheat-bridges"

[project.entry-points."wralea"]
"my_pkg" = "openalea.wheatbridges_wralea"